fix a bug in which the Splash width caused a horizontal scrolling on linux

--- a/django-dispensa/wheelie/client/scss/layout/_splash.scss
+++ b/django-dispensa/wheelie/client/scss/layout/_splash.scss
@@ -1,7 +1,7 @@
 .splash {
   height: 100vh;
   position: relative;
-  width: 100vw;
+  width: 100%;
   z-index: $z-splash;
 
   .webp & {
